# he-man-tenseal

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
data/: README.md
demo/mnist/: input.npy  mnist.onnx
demo/mnist/test-data/: 0-0.npy  0-1.npy  0-2.npy  0-3.npy  0-4.npy  0-5.npy  0-6.npy  0-7.npy  0-8.npy  0-9.npy  1-0.npy  1-1.npy  1-2.npy  1-3.npy  1-4.npy  1-5.npy  1-6.npy  1-7.npy  1-8.npy  1-9.npy  2-0.npy  2-1.npy  2-2.npy  2-3.npy  2-4.npy  2-5.npy  2-6.npy  2-7.npy  2-8.npy  2-9.npy  3-0.npy  3-1.npy  3-2.npy  3-3.npy  3-4.npy  3-5.npy  3-6.npy  3-7.npy  3-8.npy  3-9.npy  (+60 more)
evaluation/: .gitignore  benchmark.py  cleartext_accuracy.py  cryptonets.onnx  cryptonets_square.onnx  encryption_params.py  lenet5.onnx  lenet5_square.onnx  mobilefacenets.onnx  relu_approximation.py  setup.md
evaluation/mnist_data/: 1.npy  10.npy  100.npy  101.npy  102.npy  103.npy  104.npy  105.npy  106.npy  107.npy  108.npy  109.npy  11.npy  110.npy  111.npy  112.npy  113.npy  114.npy  115.npy  116.npy  117.npy  118.npy  119.npy  12.npy  120.npy  121.npy  122.npy  123.npy  124.npy  125.npy  126.npy  127.npy  128.npy  129.npy  13.npy  130.npy  131.npy  132.npy  133.npy  134.npy  (+959 more)
he_man_tenseal/: config.py  crypto.py  inference.py  main.py
scripts/: generate_mnist_calibration_data.py  generate_mnist_data.py  generate_test_calibration_data.py  generate_test_models.py  train_mnist_model.py
scripts/batchnorm/: batchnorm.py
tenseal_inference/: config.py  crypto.py  inference.py  main.py
tests/: test_cli.py  test_definitions.py  test_encrypt_decrypt.py  test_inference.py  test_keygen.py  test_keyparams.py
tests/calibration-data/: lower_-1_upper_1.npz  lower_-512_upper_0.npz  lower_0_upper_100.npz  lower_0_upper_1000.npz  lower_0_upper_200.npz  lower_0_upper_5.npz  lower_2000_upper_2000.npz
tests/models/: 3-bit-int-model.onnx  add.onnx  avgpool1d.onnx  avgpool2d.onnx  avgpool3d.onnx  conv.onnx  conv_v2.onnx  gemm.onnx  matmul.onnx  mul.onnx  pad-constant-3d.onnx  pad-edge-2d.onnx  pad-reflection-1d.onnx  pad-zero-2d.onnx  power2-plus-power4.onnx
tests/models-approximated/: mnist_small_relu.onnx  relu.onnx
tests/models-fixed-depth/: depth1.onnx  depth2.onnx  depth3.onnx
tests/test-inputs/: mnist_28x28_7.npy
