[metadata]
name = he-man-tenseal
version = 0.0.1
author = David Drexel, Alessio Montuoro, Martin Nocker, Michael Rader
author_email = Martin.Nocker@mci.edu
description = he-man-tenseal
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smile-ffg/he-man-concrete/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

install_requires =
    click>=7.1.2
    jsonschema>=4.9.1
    loguru>=0.5.3
    numpy>=1.22.2
    onnx>=1.11.0
    onnxruntime>=1.10.0
    pydantic>=1.7.3
    python-dotenv>=0.15.0
    tenseal>=0.3.12

[options.extras_require]
evaluation =
    argparse>=1.4.0
    torch>=1.11.0
    torchvision>=0.12
    tqdm>=4.64.0
dev =
    pre-commit >= 2.10
    pytest >= 6.2.2
    pytest-cov>=2.11.1
    pytest-mock>=3.5.1
    build>=0.3.0
    flake8>=4.0.1
    torch>=1.11.0
    torchvision>=0.12

[options.entry_points]
console_scripts =
    he-man-tenseal=he_man_tenseal.main:command_line
